# crosswire-network-manager

./: .gitignore  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  release.yml
contrib/: install-prebuilt.sh  uninstall.sh  verify.sh
data/: nm-crosswire-service.conf  nm-crosswire-service.name.in
pppd-plugin/: OPENTUNNEL_ENV_CONTRACT.md  meson.build  nm-crosswire-netparams.c  nm-crosswire-netparams.h  nm-crosswire-pppd-compat.h  nm-crosswire-pppd-plugin.c  test-netparams.c
properties/: meson.build  nm-crosswire-cert-dialog.c  nm-crosswire-editor-compat.h  nm-crosswire-editor-plugin.c  nm-crosswire-editor-plugin.h  nm-crosswire-editor.c  nm-crosswire-import-fortinet.c  nm-crosswire-import.c  nm-crosswire-import.h
service/: Cargo.toml
service/examples/: nm_sim.rs
service/src/: cert_trust.rs  config.rs  main.rs  nm.rs  plugin.rs  state.rs  supervisor.rs  user_session.rs
